WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286690
AX: VoiceOver hangs in Safari when a select element deletes itself as a result of an onchange event
https://bugs.webkit.org/show_bug.cgi?id=286690
Summary
AX: VoiceOver hangs in Safari when a select element deletes itself as a resul...
Tyler Wilcock
Reported
2025-01-29 10:15:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-29 10:15:47 PST
<
rdar://problem/143830006
>
Tyler Wilcock
Comment 2
2025-01-29 10:39:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39698
EWS
Comment 3
2025-01-29 15:34:26 PST
Committed
289526@main
(edd3aebf883a): <
https://commits.webkit.org/289526@main
> Reviewed commits have been landed. Closing PR #39698 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug